Lagt til flytdiagram i README.md, oppdatert documentation.yaml, oppdatert endepunkt for uthenting av profilering med opplysninger-om-arbeidssøker id
